2007-08-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: Version bump

	* NEWS, NEWS-3.99: Renamed NEWS file to NEWS-3.99

	* NEWS-3.10: Updated to include 3.10.12 release notes

==============================================================================

2007-08-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.99.3.1 released (SVN tag: release-3-99-3-1)

	* NEWS: Updated to reflect recent changes

	* configure.ac: Version bump

	* configure.ac, itpp/base/Makefile.am, itpp/base/blas.h,
	itpp/base/sources.mk, itpp/base/vec.h, itpp/base/zdotusub.f: Fixed
	a bug related to zdotu_() BLAS function

	Wrong declaration of zdotu_() BLAS function interface caused
	segmentation faults when IT++ was compiled with
	"-fomit-frame-pointer" flag. To fix this problem a Fortran wrapper
	function zdotusub_() has been added to IT++. This wrapper function
	comes from NetLib's CBLAS package.

==============================================================================

2007-08-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.99.3 released (SVN tag: release-3-99-3)

	* NEWS: Updated to reflect recent changes

2007-08-09  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, win32/Makefile.am,
	win32/itpp_acml_tests/Makefile.am,
	win32/itpp_acml_tests/array_test.vcproj,
	win32/itpp_acml_tests/bch_test.vcproj,
	win32/itpp_acml_tests/bessel_test.vcproj,
	win32/itpp_acml_tests/blas_test.vcproj,
	win32/itpp_acml_tests/itpp_acml_tests.sln, win32/itpp_mkl.vcproj,
	win32/itpp_mkl_tests/Makefile.am,
	win32/itpp_mkl_tests/array_test.vcproj,
	win32/itpp_mkl_tests/bch_test.vcproj,
	win32/itpp_mkl_tests/bessel_test.vcproj,
	win32/itpp_mkl_tests/blas_test.vcproj,
	win32/itpp_mkl_tests/itpp_mkl_tests.sln: Added MSVC++ project
	files for test programs

	This patch includes MSVC++ project files for easy building and
	linking a few test programs with IT++ and MKL or ACML libraries.
	The project files are configured to use 32-bit versions of MKL